trunk/Archive2/74/51c4318323af7b/output
main.cpp: In function 'int main()':
main.cpp:6:20: error: wrong number of template arguments (1, should be 2)
     std::array<char> letters {'o', 'm', 'g', 'w', 't', 'f'};
                    ^
In file included from main.cpp:1:0:
/usr/include/c++/4.8/array:81:12: error: provided for 'template<class _Tp, long unsigned int _Nm> struct std::array'
     struct array
            ^
main.cpp:6:30: error: invalid type in declaration before '{' token
     std::array<char> letters {'o', 'm', 'g', 'w', 't', 'f'};
                              ^
main.cpp:6:59: error: scalar object 'letters' requires one element in initializer
     std::array<char> letters {'o', 'm', 'g', 'w', 't', 'f'};
                                                           ^
